--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <H1>
-        SCRAAAAAAAAAAAAPPEE?!!!?
+        SCRAAAAAAAPPEE?!!!?
     </H1>
 
     <img src="imgs/scrape.webp" alt="scraper">
