--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         SCRAPE?!!!?
     </H1>
 
+    <div id="animation">
     <img src="imgs/scrape.webp" alt="scraper">
-    
+    </div>
+
 </body>
 </html>
